app1-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy1
  namespace: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy1
  template:
    metadata:
      labels:
        app: deploy1
    spec:
      containers:
        - name: busybox
          image: busybox
          imagePullPolicy: IfNotPresent
          command: ['sh', '-c', 'echo Running ; sleep 3600']
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
