deny-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: app2
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
